# oaps

./: .gitignore  .markdownlint-cli2.jsonc  .mdformat.toml  .vale.ini  CITATION.cff  Justfile  README.md  cosmic-ray.toml  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml  support.yml
.github/workflows/: ci.yml  documentation.yml  release.yml
agents/: agent-developer.md  agent-explorer.md  agent-reviewer.md  code-architect.md  code-developer.md  code-explorer.md  code-reviewer.md  command-developer.md  command-explorer.md  command-reviewer.md  hook-developer.md  hook-explorer.md  hook-reviewer.md  idea-partner.md  skill-developer.md  skill-explorer.md  skill-reviewer.md  spec-architect.md  spec-explorer.md  spec-reviewer.md  spec-writer.md
commands/: dev.md  flow.md  idea.md  info.md
commands/agent/: brainstorm.md  review.md  test.md  write.md
commands/command/: brainstorm.md  review.md  test.md  write.md
commands/hook/: brainstorm.md  candidates.md  review.md  test.md  write.md
commands/skill/: brainstorm.md  migrate.md  reference.md  review.md  template.md  test.md  workflow.md  write.md
commands/spec/: create.md  info.md  review.md
docs/: index.md
docs/explanation/: directory-architecture.md
flows/agent/review/: WORKFLOW.md
flows/agent/test/: WORKFLOW.md
flows/agent/update/: WORKFLOW.md
flows/agent/write/: WORKFLOW.md
flows/command/review/: WORKFLOW.md
flows/command/test/: WORKFLOW.md
flows/command/update/: WORKFLOW.md
flows/command/write/: WORKFLOW.md
flows/dev/general/: WORKFLOW.md
flows/hook/brainstorm/: WORKFLOW.md
flows/hook/review/: WORKFLOW.md
flows/hook/test/: WORKFLOW.md
flows/hook/write/: WORKFLOW.md
flows/idea/archive/: WORKFLOW.md
flows/idea/create/: WORKFLOW.md
flows/idea/crystallize/: WORKFLOW.md
flows/idea/explore/: WORKFLOW.md
flows/idea/link/: WORKFLOW.md
flows/idea/refine/: WORKFLOW.md
flows/idea/resume/: WORKFLOW.md
flows/python/develop/: WORKFLOW.md
flows/python/test-debugging/: WORKFLOW.md
flows/python/test-review/: WORKFLOW.md
flows/python/test-writing/: WORKFLOW.md
flows/skill/add-reference/: WORKFLOW.md
flows/skill/add-template/: WORKFLOW.md
flows/skill/migrate/: WORKFLOW.md
flows/skill/remove-reference/: WORKFLOW.md
flows/skill/remove-template/: WORKFLOW.md
flows/skill/review/: WORKFLOW.md
flows/skill/test/: WORKFLOW.md
flows/skill/update/: WORKFLOW.md
flows/skill/update-reference/: WORKFLOW.md
flows/skill/update-template/: WORKFLOW.md
flows/skill/write/: WORKFLOW.md
flows/spec/add-page/: WORKFLOW.md
flows/spec/add-req/: WORKFLOW.md
flows/spec/add-test/: WORKFLOW.md
flows/spec/create/: WORKFLOW.md
flows/spec/delete-req/: WORKFLOW.md
flows/spec/delete-test/: WORKFLOW.md
flows/spec/move-items/: WORKFLOW.md
flows/spec/remove-page/: WORKFLOW.md
flows/spec/review/: WORKFLOW.md
flows/spec/review-organization/: WORKFLOW.md
flows/spec/review-req/: WORKFLOW.md
flows/spec/review-test/: WORKFLOW.md
flows/spec/split/: WORKFLOW.md
flows/spec/update/: WORKFLOW.md
flows/spec/update-req/: WORKFLOW.md
flows/spec/update-test/: WORKFLOW.md
flows/spec/write/: WORKFLOW.md
scripts/: release_notes.py  verify_release.py  version_bump.py
skills/agent-development/: SKILL.md
skills/agent-development/examples/: agent-creation-prompt.md  complete-agent-examples.md
skills/agent-development/references/: agent-creation-system-prompt.md  anatomy.md  system-prompt-design.md  triggering-examples.md  validation.md
skills/command-development/: SKILL.md
skills/command-development/examples/: simple-commands.md
skills/command-development/references/: advanced-workflows.md  anatomy.md  documentation-patterns.md  frontmatter-reference.md  interactive-commands.md  testing-strategies.md
skills/hook-rule-writing/: SKILL.md
skills/hook-rule-writing/examples/: automation-scripts.md  context-injection.md  event-specific.md  git-aware-rules.md  input-modification.md  logging-audit.md  permission-control.md
skills/hook-rule-writing/references/: actions.md  conditions.md  configuration.md  debugging.md  events.md  expressions.md  functions.md  patterns.md  priorities.md  security.md  templates.md  testing.md
skills/idea-writing/: SKILL.md
skills/idea-writing/references/: critique-patterns.md  document-structure.md  expansion-patterns.md  exploration-patterns.md  synthesis-patterns.md
skills/idea-writing/templates/: default.md.j2  process.md.j2  product.md.j2  research.md.j2  technical.md.j2
skills/python-dataviz/: SKILL.md
skills/python-dataviz/references/: api-reference.md  example.md  matplotlib-fundamentals.md  plot-types.md  seaborn-fundamentals.md  seaborn-objects.md  styling.md  troubleshooting.md
skills/python-dataviz/scripts/: plot_template.py  style_configurator.py
skills/python-dataviz/workflows/: example.md
skills/python-polars/: SKILL.md
skills/python-polars/references/: best-practices.md  core-concepts.md  io-guide.md  operations.md  pandas-migration.md  transformations.md
skills/python-practices/: SKILL.md
skills/python-practices/references/: benchmarking.md  code-organization.md  code-style.md  dataclass-patterns.md  debugging.md  dependencies.md  error-handling.md  profiling.md  public-api-design.md  refactoring.md  security.md  testing-antipatterns.md  testing.md  tooling.md  typing.md
skills/skill-development/: SKILL.md
skills/skill-development/references/: activation-hooks.md  (+5 more)
skills/spec-writing/: SKILL.md
src/oaps/: __init__.py  __main__.py  constants.py  context.py  enums.py  exceptions.py  flow.py  reference.py  slash_command.py  types.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_duckdb_jsonl.py
tests/docexamples/: conftest.py
tests/integration/: conftest.py
tests/properties/: conftest.py
tests/unit/: conftest.py  test_cli.py  test_context.py  test_paths.py  test_reference.py  test_skill.py
(+374 files in other folders)
